feat: seeding data for profile service

--- a/Identity.Presentation/appsettings.json
+++ b/Identity.Presentation/appsettings.json
@@ -16,6 +16,12 @@
 
   "AllowedHosts": "*",
 
+  "Cors": {
+    "AllowOrigins": [
+      "https://localhost:9999"
+    ]
+  },
+
   "Server": {
     "BasePath": "/identity"
   },
@@ -24,7 +30,10 @@
     "AccessKey": "",
     "RefreshKey": "",
     "Issuer": "org.infinity.net",
-    "Audiences": "webapp.com,mobileapp",
+    "Audiences": [
+      "webapp.com",
+      "mobileapp"
+    ],
     "ValidDuration": "1800",
     "RefreshDuration": "2592000"
   },
