--- a/Ocelot.Presentaition/appsettings.json
+++ b/Ocelot.Presentaition/appsettings.json
@@ -20,10 +20,19 @@
 
   "AllowedHosts": "*",
 
+  "Cors": {
+    "AllowOrigins": [
+      "*"
+    ]
+  },
+
   "Jwt": {
     "AccessKey": "",
     "Issuer": "org.infinity.net",
-    "Audiences": "webapp.com,mobileapp"
+    "Audiences": [
+      "webapp.com",
+      "mobileapp"
+    ]
   },
 
   "GrafanaStack": {
