feat: handle sign in & fix data seeder

--- a/Identity.Presentation/appsettings.json
+++ b/Identity.Presentation/appsettings.json
@@ -26,6 +26,10 @@
     "BasePath": "/identity"
   },
 
+  "GrpcServers": {
+    "Profile-Service": "https://localhost:8283"
+  },
+
   "Jwt": {
     "AccessKey": "",
     "RefreshKey": "",
