--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -11,6 +11,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="AutoMapper" Version="13.0.1" />
 		<PackageReference Include="Bogus" Version="35.6.1" />
 		<PackageReference Include="Google.Protobuf" Version="3.28.2" />
 		<PackageReference Include="Grpc.AspNetCore" Version="2.66.0" />
@@ -26,10 +27,6 @@
 
 	<ItemGroup>
 		<Protobuf Include="Protos\**\*.proto" GrpcServices="Both" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <None Remove="Protos\identity.proto" />
 	</ItemGroup>
 	
 	<ItemGroup>
