refactor: change all ports

--- a/Group.Presentation/appsettings.json
+++ b/Group.Presentation/appsettings.json
@@ -17,14 +17,14 @@
   "AllowedHosts": "*",
 
   "GrpcServers": {
-    "IdentityService": "https://localhost:8282",
-    "ProfileService": "https://localhost:8283",
-    "PostService": "https://localhost:8286"
+    "IdentityService": "http://localhost:60001",
+    "ProfileService": "http://localhost:60002",
+    "PostService": "http://localhost:60005"
   },
 
   "Cors": {
     "AllowOrigins": [
-      "https://localhost:9999"
+      "http://localhost:60000"
     ]
   },
 
@@ -46,7 +46,7 @@
     "ApiDocs": "group-service-rest-api-service-dev",
     "Version": "v1",
     "Description": "This is the APIs documentation for Group Service.",
-    "ServerUrl": "https://localhost:8290/group",
+    "ServerUrl": "http://localhost:60004/group",
     "ServerDescription": "Group Service API service For Development",
     "ContactName": "Infinity Net Organization",
     "ContactEmail": "tech.infinitynet.org@gmail.com"
@@ -69,7 +69,7 @@
 
   "Metric": {
     "StandAloneKestrelServerEnabled": false,
-    "Port": 8290,
+    "Port": 60004,
     "Url": "/metrics",
     "Hostname": "+",
     "HttpMetricsEnabled": true,
@@ -80,7 +80,7 @@
     "HealthChecks": [
       {
         "Name": "HTTP-Api-Basic",
-        "Uri": "https://localhost:8290/healthz"
+        "Uri": "http://localhost:60004/healthz"
       }
     ],
     "EvaluationTimeOnSeconds": 10,
