--- a/Identity.Presentation/appsettings.json
+++ b/Identity.Presentation/appsettings.json
@@ -18,7 +18,7 @@
 
   "Cors": {
     "AllowOrigins": [
-      "https://localhost:9999"
+      "http://localhost:60000"
     ]
   },
 
@@ -27,7 +27,7 @@
   },
 
   "GrpcServers": {
-    "ProfileService": "https://localhost:8283"
+    "ProfileService": "http://localhost:60002"
   },
 
   "Jwt": {
@@ -47,7 +47,7 @@
     "ApiDocs": "identity-service-rest-api-service-dev",
     "Version": "v1",
     "Description": "This is the APIs documentation for Identity Service.",
-    "ServerUrl": "https://localhost:8282/identity",
+    "ServerUrl": "http://localhost:60001/identity",
     "ServerDescription": "Identity Service API service For Development",
     "ContactName": "Infinity Net Organization",
     "ContactEmail": "tech.infinitynet.org@gmail.com"
@@ -74,7 +74,7 @@
 
   "Metric": {
     "StandAloneKestrelServerEnabled": false,
-    "Port": 8282,
+    "Port": 60001,
     "Url": "/metrics",
     "Hostname": "+",
     "HttpMetricsEnabled": true,
@@ -85,7 +85,7 @@
     "HealthChecks": [
       {
         "Name": "HTTP-Api-Basic",
-        "Uri": "https://localhost:8282/healthz"
+        "Uri": "http://localhost:60001/healthz"
       }
     ],
     "EvaluationTimeOnSeconds": 10,
