--- a/Mail.Presentation/appsettings.json
+++ b/Mail.Presentation/appsettings.json
@@ -29,7 +29,7 @@
 
   "Metric": {
     "StandAloneKestrelServerEnabled": false,
-    "Port": 8284,
+    "Port": 60009,
     "Url": "/metrics",
     "Hostname": "+",
     "HttpMetricsEnabled": true,
@@ -40,7 +40,7 @@
     "HealthChecks": [
       {
         "Name": "HTTP-Api-Basic",
-        "Uri": "https://localhost:8284/healthz"
+        "Uri": "http://localhost:60009/healthz"
       }
     ],
     "EvaluationTimeOnSeconds": 10,
