--- a/Profile.Presentation/appsettings.json
+++ b/Profile.Presentation/appsettings.json
@@ -17,12 +17,12 @@
   "AllowedHosts": "*",
 
   "GrpcServers": {
-    "IdentityService": "https://localhost:8282"
+    "IdentityService": "http://localhost:60001"
   },
 
   "Cors": {
     "AllowOrigins": [
-      "https://localhost:9999"
+      "http://localhost:60000"
     ]
   },
 
@@ -44,7 +44,7 @@
     "ApiDocs": "profile-service-rest-api-service-dev",
     "Version": "v1",
     "Description": "This is the APIs documentation for Profile Service.",
-    "ServerUrl": "https://localhost:8283/profile",
+    "ServerUrl": "http://localhost:60002/profile",
     "ServerDescription": "Profile Service API service For Development",
     "ContactName": "Infinity Net Organization",
     "ContactEmail": "tech.infinitynet.org@gmail.com"
@@ -67,7 +67,7 @@
 
   "Metric": {
     "StandAloneKestrelServerEnabled": false,
-    "Port": 8284,
+    "Port": 60002,
     "Url": "/metrics",
     "Hostname": "+",
     "HttpMetricsEnabled": true,
@@ -78,7 +78,7 @@
     "HealthChecks": [
       {
         "Name": "HTTP-Api-Basic",
-        "Uri": "https://localhost:8283/healthz"
+        "Uri": "http://localhost:60002/healthz"
       }
     ],
     "EvaluationTimeOnSeconds": 10,
