--- a/Reaction.Presentation/appsettings.json
+++ b/Reaction.Presentation/appsettings.json
@@ -17,16 +17,16 @@
   "AllowedHosts": "*",
 
   "GrpcServers": {
-    "IdentityService": "https://localhost:8282",
-    "ProfileService": "https://localhost:8283",
-    "RelationshipService": "https://localhost:8285",
-    "PostService": "https://localhost:8286",
-    "CommentService": "https://localhost:8287"
+    "IdentityService": "http://localhost:60001",
+    "ProfileService": "http://localhost:60002",
+    "RelationshipService": "http://localhost:60003",
+    "PostService": "http://localhost:60005",
+    "CommentService": "http://localhost:60006"
   },
 
   "Cors": {
     "AllowOrigins": [
-      "https://localhost:9999"
+      "http://localhost:60000"
     ]
   },
 
@@ -48,7 +48,7 @@
     "ApiDocs": "reaction-service-rest-api-service-dev",
     "Version": "v1",
     "Description": "This is the APIs documentation for Reaction Service.",
-    "ServerUrl": "https://localhost:8287/reaction",
+    "ServerUrl": "http://localhost:60007/reaction",
     "ServerDescription": "Reaction Service API service For Development",
     "ContactName": "Infinity Net Organization",
     "ContactEmail": "tech.infinitynet.org@gmail.com"
@@ -71,7 +71,7 @@
 
   "Metric": {
     "StandAloneKestrelServerEnabled": false,
-    "Port": 8287,
+    "Port": 60007,
     "Url": "/metrics",
     "Hostname": "+",
     "HttpMetricsEnabled": true,
@@ -82,7 +82,7 @@
     "HealthChecks": [
       {
         "Name": "HTTP-Api-Basic",
-        "Uri": "https://localhost:8287/healthz"
+        "Uri": "http://localhost:60007/healthz"
       }
     ],
     "EvaluationTimeOnSeconds": 10,
