--- a/Relationship.Presentation/appsettings.json
+++ b/Relationship.Presentation/appsettings.json
@@ -17,13 +17,13 @@
   "AllowedHosts": "*",
 
   "GrpcServers": {
-    "IdentityService": "https://localhost:8282",
-    "ProfileService": "https://localhost:8283"
+    "IdentityService": "http://localhost:60001",
+    "ProfileService": "http://localhost:60002"
   },
 
   "Cors": {
     "AllowOrigins": [
-      "https://localhost:9999"
+      "http://localhost:60000"
     ]
   },
 
@@ -45,7 +45,7 @@
     "ApiDocs": "relationship-service-rest-api-service-dev",
     "Version": "v1",
     "Description": "This is the APIs documentation for Relationship Service.",
-    "ServerUrl": "https://localhost:8285/relationship",
+    "ServerUrl": "http://localhost:60003/relationship",
     "ServerDescription": "Relationship Service API service For Development",
     "ContactName": "Infinity Net Organization",
     "ContactEmail": "tech.infinitynet.org@gmail.com"
@@ -68,7 +68,7 @@
 
   "Metric": {
     "StandAloneKestrelServerEnabled": false,
-    "Port": 8285,
+    "Port": 60003,
     "Url": "/metrics",
     "Hostname": "+",
     "HttpMetricsEnabled": true,
@@ -79,7 +79,7 @@
     "HealthChecks": [
       {
         "Name": "HTTP-Api-Basic",
-        "Uri": "https://localhost:8285/healthz"
+        "Uri": "https://localhost:60003/healthz"
       }
     ],
     "EvaluationTimeOnSeconds": 10,
