--- a/Comment.Presentation/appsettings.json
+++ b/Comment.Presentation/appsettings.json
@@ -17,15 +17,15 @@
   "AllowedHosts": "*",
 
   "GrpcServers": {
-    "IdentityService": "https://localhost:8282",
-    "ProfileService": "https://localhost:8283",
-    "RelationshipService": "https://localhost:8285",
-    "PostService": "https://localhost:8286"
+    "IdentityService": "http://localhost:60001",
+    "ProfileService": "http://localhost:60002",
+    "RelationshipService": "http://localhost:60003",
+    "PostService": "http://localhost:60005"
   },
 
   "Cors": {
     "AllowOrigins": [
-      "https://localhost:9999"
+      "http://localhost:60000"
     ]
   },
 
@@ -47,7 +47,7 @@
     "ApiDocs": "comment-service-rest-api-service-dev",
     "Version": "v1",
     "Description": "This is the APIs documentation for Comment Service.",
-    "ServerUrl": "https://localhost:8287/comment",
+    "ServerUrl": "http://localhost:60006/comment",
     "ServerDescription": "Comment Service API service For Development",
     "ContactName": "Infinity Net Organization",
     "ContactEmail": "tech.infinitynet.org@gmail.com"
@@ -70,7 +70,7 @@
 
   "Metric": {
     "StandAloneKestrelServerEnabled": false,
-    "Port": 8287,
+    "Port": 60006,
     "Url": "/metrics",
     "Hostname": "+",
     "HttpMetricsEnabled": true,
@@ -81,7 +81,7 @@
     "HealthChecks": [
       {
         "Name": "HTTP-Api-Basic",
-        "Uri": "https://localhost:8287/healthz"
+        "Uri": "http://localhost:60006/healthz"
       }
     ],
     "EvaluationTimeOnSeconds": 10,
