--- a/Post.Presentation/appsettings.json
+++ b/Post.Presentation/appsettings.json
@@ -17,15 +17,15 @@
   "AllowedHosts": "*",
 
   "GrpcServers": {
-    "IdentityService": "https://localhost:8282",
-    "ProfileService": "https://localhost:8283",
-    "RelationshipService": "https://localhost:8285",
-    "GroupService": "https://localhost:8290"
+    "IdentityService": "http://localhost:60001",
+    "ProfileService": "http://localhost:60002",
+    "RelationshipService": "http://localhost:60003",
+    "GroupService": "http://localhost:60004"
   },
 
   "Cors": {
     "AllowOrigins": [
-      "https://localhost:9999"
+      "http://localhost:60000"
     ]
   },
 
@@ -47,7 +47,7 @@
     "ApiDocs": "post-service-rest-api-service-dev",
     "Version": "v1",
     "Description": "This is the APIs documentation for Post Service.",
-    "ServerUrl": "https://localhost:8286/post",
+    "ServerUrl": "http://localhost:60005/post",
     "ServerDescription": "Post Service API service For Development",
     "ContactName": "Infinity Net Organization",
     "ContactEmail": "tech.infinitynet.org@gmail.com"
@@ -70,7 +70,7 @@
 
   "Metric": {
     "StandAloneKestrelServerEnabled": false,
-    "Port": 8286,
+    "Port": 60005,
     "Url": "/metrics",
     "Hostname": "+",
     "HttpMetricsEnabled": true,
@@ -81,7 +81,7 @@
     "HealthChecks": [
       {
         "Name": "HTTP-Api-Basic",
-        "Uri": "https://localhost:8286/healthz"
+        "Uri": "http://localhost:60005/healthz"
       }
     ],
     "EvaluationTimeOnSeconds": 10,
