--- a/Identity.Presentation/appsettings.json
+++ b/Identity.Presentation/appsettings.json
@@ -14,6 +14,12 @@
     }
   },
 
+  "Kestrel": {
+    "EndpointDefaults": {
+      "Protocols": "Http2"
+    }
+  },
+
   "AllowedHosts": "*",
 
   "Cors": {
@@ -31,8 +37,8 @@
   },
 
   "Jwt": {
-    "AccessKey": "",
-    "RefreshKey": "",
+    "AccessKey": "your-access-secret-key",
+    "RefreshKey": "your-refresh-secret-key",
     "Issuer": "org.infinity.net",
     "Audiences": [
       "webapp.com",
