--- a/Relationship.Presentation/appsettings.json
+++ b/Relationship.Presentation/appsettings.json
@@ -14,6 +14,12 @@
     }
   },
 
+  "Kestrel": {
+    "EndpointDefaults": {
+      "Protocols": "Http2"
+    }
+  },
+
   "AllowedHosts": "*",
 
   "GrpcServers": {
@@ -32,7 +38,7 @@
   },
 
   "Jwt": {
-    "AccessKey": "",
+    "AccessKey": "your-access-secret-key",
     "Issuer": "org.infinity.net",
     "Audiences": [
       "webapp.com",
