feat: complete seeding

--- a/Group.Presentation/appsettings.json
+++ b/Group.Presentation/appsettings.json
@@ -23,9 +23,9 @@
   "AllowedHosts": "*",
 
   "GrpcServers": {
-    "IdentityService": "http://localhost:60001",
-    "ProfileService": "http://localhost:60002",
-    "PostService": "http://localhost:60005"
+    "IdentityService": "https://localhost:61001",
+    "ProfileService": "https://localhost:61002",
+    "PostService": "https://localhost:61005"
   },
 
   "Cors": {
