--- a/Identity.Presentation/appsettings.json
+++ b/Identity.Presentation/appsettings.json
@@ -14,12 +14,6 @@
     }
   },
 
-  "Kestrel": {
-    "EndpointDefaults": {
-      "Protocols": "Http2"
-    }
-  },
-
   "AllowedHosts": "*",
 
   "Cors": {
@@ -33,7 +27,7 @@
   },
 
   "GrpcServers": {
-    "ProfileService": "http://localhost:60002"
+    "ProfileService": "https://localhost:61002"
   },
 
   "Jwt": {
