--- a/Ocelot.Presentaition/appsettings.json
+++ b/Ocelot.Presentaition/appsettings.json
@@ -15,7 +15,7 @@
   },
 
   "GrpcServers": {
-    "Identity-Service": "http://localhost:60000"
+    "Identity-Service": "https://localhost:61001"
   },
 
   "AllowedHosts": "*",
