--- a/Post.Presentation/appsettings.json
+++ b/Post.Presentation/appsettings.json
@@ -23,10 +23,10 @@
   "AllowedHosts": "*",
 
   "GrpcServers": {
-    "IdentityService": "http://localhost:60001",
-    "ProfileService": "http://localhost:60002",
-    "RelationshipService": "http://localhost:60003",
-    "GroupService": "http://localhost:60004"
+    "IdentityService": "https://localhost:61001",
+    "ProfileService": "https://localhost:61002",
+    "RelationshipService": "https://localhost:61003",
+    "GroupService": "https://localhost:61004"
   },
 
   "Cors": {
