--- a/Profile.Presentation/appsettings.json
+++ b/Profile.Presentation/appsettings.json
@@ -14,16 +14,10 @@
     }
   },
 
-  "Kestrel": {
-    "EndpointDefaults": {
-      "Protocols": "Http2"
-    }
-  },
-
   "AllowedHosts": "*",
 
   "GrpcServers": {
-    "IdentityService": "http://localhost:60001"
+    "IdentityService": "https://localhost:61001"
   },
 
   "Cors": {
