--- a/Relationship.Presentation/appsettings.json
+++ b/Relationship.Presentation/appsettings.json
@@ -23,8 +23,8 @@
   "AllowedHosts": "*",
 
   "GrpcServers": {
-    "IdentityService": "http://localhost:60001",
-    "ProfileService": "http://localhost:60002"
+    "IdentityService": "https://localhost:61001",
+    "ProfileService": "https://localhost:61002"
   },
 
   "Cors": {
