--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -15,16 +15,17 @@
 		<PackageReference Include="Bogus" Version="35.6.1" />
 		<PackageReference Include="Google.Protobuf" Version="3.28.2" />
 		<PackageReference Include="Grpc.AspNetCore" Version="2.66.0" />
-		<PackageReference Include="Grpc.Tools" Version="2.66.0">
+		<PackageReference Include="Grpc.Tools" Version="2.67.0">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="MassTransit" Version="8.2.5" />
-		<PackageReference Include="MassTransit.RabbitMQ" Version="8.2.5" />
-		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.8" />
+		<PackageReference Include="MassTransit" Version="8.3.0" />
+		<PackageReference Include="MassTransit.RabbitMQ" Version="8.3.0" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="8.0.10" />
+		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.10" />
 		<PackageReference Include="StackExchange.Redis" Version="2.8.16" />
-		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.8.1" />
-		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.8.1" />
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.9.0" />
+		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.9.0" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -33,6 +34,7 @@
 
 	<ItemGroup>
 	  <None Remove="Protos\comment.proto" />
+	  <None Remove="Protos\group.proto" />
 	  <None Remove="Protos\post.proto" />
 	</ItemGroup>
 	
@@ -44,6 +46,12 @@
 	  <EmbeddedResource Update="Resources\SharedResource.en-US.resx">
 	    <SubType>Designer</SubType>
 	  </EmbeddedResource>
+	</ItemGroup>
+	
+	<ItemGroup>
+	  <Protobuf Update="Protos\group.proto">
+	    <GrpcServices>Both</GrpcServices>
+	  </Protobuf>
 	</ItemGroup>
 	
 	<ItemGroup>
