--- a/Group.Presentation/Properties/launchSettings.json
+++ b/Group.Presentation/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:60004",
+      "applicationUrl": "http://localhost:60004;https://localhost:61004",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
