--- a/Identity.Presentation/Properties/launchSettings.json
+++ b/Identity.Presentation/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:60001",
+      "applicationUrl": "http://localhost:60001;https://localhost:61001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
