--- a/Post.Presentation/Properties/launchSettings.json
+++ b/Post.Presentation/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:60005",
+      "applicationUrl": "http://localhost:60005;https://localhost:61005",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
