--- a/Profile.Presentation/Properties/launchSettings.json
+++ b/Profile.Presentation/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:60002",
+      "applicationUrl": "http://localhost:60002;https://localhost:61002",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
