--- a/Reaction.Presentation/Properties/launchSettings.json
+++ b/Reaction.Presentation/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:60007",
+      "applicationUrl": "http://localhost:60007;https://localhost:61007",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
