--- a/Relationship.Presentation/Properties/launchSettings.json
+++ b/Relationship.Presentation/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:60003",
+      "applicationUrl": "http://localhost:60003;https://localhost:61003",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
