--- a/Tag.Presentation/Properties/launchSettings.json
+++ b/Tag.Presentation/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:60008",
+      "applicationUrl": "http://localhost:60008;https://localhost:61008",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
