--- a/Tag.Presentation/appsettings.json
+++ b/Tag.Presentation/appsettings.json
@@ -23,11 +23,11 @@
   "AllowedHosts": "*",
 
   "GrpcServers": {
-    "IdentityService": "http://localhost:60001",
-    "ProfileService": "http://localhost:60002",
-    "RelationshipService": "http://localhost:60003",
-    "PostService": "http://localhost:60005",
-    "CommentService": "http://localhost:60006"
+    "IdentityService": "https://localhost:61001",
+    "ProfileService": "https://localhost:61002",
+    "RelationshipService": "https://localhost:61003",
+    "PostService": "https://localhost:61005",
+    "CommentService": "https://localhost:61006"
   },
 
   "Cors": {
