chore: hot fix gateway authen error

--- a/Ocelot.Presentaition/appsettings.json
+++ b/Ocelot.Presentaition/appsettings.json
@@ -15,7 +15,7 @@
   },
 
   "GrpcServers": {
-    "Identity-Service": "https://localhost:61001"
+    "IdentityService": "https://localhost:61001"
   },
 
   "AllowedHosts": "*",
