--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,6 +72,19 @@ services:
       - infinity-net-network
     restart: unless-stopped
 
+  infinity-net-minio:
+    image: minio/minio:RELEASE.2024-08-26T15-33-07Z.fips
+    container_name: infinity-net-minio
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    volumes:
+      - ./Docker/minio/infinity-net-minio-data:/data:rw
+    environment:
+      MINIO_ROOT_USER: infinitynetUser
+      MINIO_ROOT_PASSWORD: Password@123
+    command: server /data --console-address ":9001"
+
   # infinity-net-tempo:
     # image: grafana/tempo:main-bbe0435
     # container_name: infinity-net-tempo
