--- a/Comment.Presentation/Properties/launchSettings.json
+++ b/Comment.Presentation/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:60006",
+      "applicationUrl": "http://localhost:60006;https://localhost:61006",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
