feat: upload raw file & iamge

--- a/File.Presentation/appsettings.json
+++ b/File.Presentation/appsettings.json
@@ -14,12 +14,6 @@
     }
   },
 
-  "Kestrel": {
-    "EndpointDefaults": {
-      "Protocols": "Http2"
-    }
-  },
-
   "AllowedHosts": "*",
 
   "GrpcServers": {
@@ -32,12 +26,13 @@
 
   "Cors": {
     "AllowOrigins": [
-      "http://localhost:60000"
+      "http://localhost:60000",
+      "https://localhost:61000"
     ]
   },
 
   "Server": {
-    "BasePath": "/tag"
+    "BasePath": "/file"
   },
 
   "Jwt": {
@@ -50,12 +45,12 @@
   },
 
   "Swagger": {
-    "Title": "Tag Service REST APIs",
-    "ApiDocs": "tag-service-rest-api-service-dev",
+    "Title": "File Service REST APIs",
+    "ApiDocs": "file-service-rest-api-service-dev",
     "Version": "v1",
-    "Description": "This is the APIs documentation for Tag Service.",
-    "ServerUrl": "http://localhost:60008/tag",
-    "ServerDescription": "Tag Service API service For Development",
+    "Description": "This is the APIs documentation for File Service.",
+    "ServerUrl": "http://localhost:60010/file",
+    "ServerDescription": "File Service API service For Development",
     "ContactName": "Infinity Net Organization",
     "ContactEmail": "tech.infinitynet.org@gmail.com"
   },
@@ -64,15 +59,27 @@
     "DefaultConnection": "Host=localhost;Port=5432;Database=tag_service_db;Username=infinitynetUser;Password=Password@123"
   },
 
+  "Minio": {
+    "Endpoint": "localhost",
+    "Port": 9000,
+    "AccessKey": "infinitynetUser",
+    "SecretKey": "Password@123",
+    "BucketName": "infinity-net-bucket"
+  },
+
+  "Redis": {
+    "Connection": "localhost:6379"
+  },
+
   "RabbitMQ": {
     "Host": "localhost",
-    "ExchangeName": "tag-service-exchange",
+    "ExchangeName": "file-service-exchange",
     "UserName": "infinitynetUser",
     "Password": "Password@123"
   },
 
   "GrafanaStack": {
-    "ServiceName": "TagService"
+    "ServiceName": "FileService"
   },
 
   "Metric": {
@@ -88,7 +95,7 @@
     "HealthChecks": [
       {
         "Name": "HTTP-Api-Basic",
-        "Uri": "http://localhost:60008/healthz"
+        "Uri": "http://localhost:60010/healthz"
       }
     ],
     "EvaluationTimeOnSeconds": 10,
