--- a/Profile.Presentation/appsettings.json
+++ b/Profile.Presentation/appsettings.json
@@ -17,7 +17,8 @@
   "AllowedHosts": "*",
 
   "GrpcServers": {
-    "IdentityService": "https://localhost:61001"
+    "IdentityService": "https://localhost:61001",
+    "RelationshipService": "https://localhost:61003"
   },
 
   "Cors": {
