--- a/Comment.Application/Comment.Application.csproj
+++ b/Comment.Application/Comment.Application.csproj
@@ -11,4 +11,10 @@
     <ProjectReference Include="..\Comment.Domain\Comment.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DTOs\Requests\" />
+    <Folder Include="Helpers\" />
+    <Folder Include="GrpcClients\" />
+  </ItemGroup>
+
 </Project>
