refactor: change http to https

--- a/Comment.Presentation/appsettings.json
+++ b/Comment.Presentation/appsettings.json
@@ -25,7 +25,9 @@
 
   "Cors": {
     "AllowOrigins": [
-      "http://localhost:60000"
+      "http://localhost:60000",
+      "https://localhost:61000",
+      "http://localhost:3000"
     ]
   },
 
@@ -47,7 +49,7 @@
     "ApiDocs": "comment-service-rest-api-service-dev",
     "Version": "v1",
     "Description": "This is the APIs documentation for Comment Service.",
-    "ServerUrl": "http://localhost:60006/comments",
+    "ServerUrl": "https://localhost:61006/comments",
     "ServerDescription": "Comment Service API service For Development",
     "ContactName": "Infinity Net Organization",
     "ContactEmail": "tech.infinitynet.org@gmail.com"
@@ -70,7 +72,7 @@
 
   "Metric": {
     "StandAloneKestrelServerEnabled": false,
-    "Port": 60006,
+    "Port": 61006,
     "Url": "/metrics",
     "Hostname": "+",
     "HttpMetricsEnabled": true,
@@ -81,7 +83,7 @@
     "HealthChecks": [
       {
         "Name": "HTTP-Api-Basic",
-        "Uri": "http://localhost:60006/healthz"
+        "Uri": "https://localhost:61006/healthz"
       }
     ],
     "EvaluationTimeOnSeconds": 10,
