--- a/File.Presentation/appsettings.json
+++ b/File.Presentation/appsettings.json
@@ -27,7 +27,8 @@
   "Cors": {
     "AllowOrigins": [
       "http://localhost:60000",
-      "https://localhost:61000"
+      "https://localhost:61000",
+      "http://localhost:3000"
     ]
   },
 
@@ -49,7 +50,7 @@
     "ApiDocs": "file-service-rest-api-service-dev",
     "Version": "v1",
     "Description": "This is the APIs documentation for File Service.",
-    "ServerUrl": "http://localhost:60010/files",
+    "ServerUrl": "https://localhost:61010/files",
     "ServerDescription": "File Service API service For Development",
     "ContactName": "Infinity Net Organization",
     "ContactEmail": "tech.infinitynet.org@gmail.com"
@@ -84,7 +85,7 @@
 
   "Metric": {
     "StandAloneKestrelServerEnabled": false,
-    "Port": 60008,
+    "Port": 61010,
     "Url": "/metrics",
     "Hostname": "+",
     "HttpMetricsEnabled": true,
@@ -95,7 +96,7 @@
     "HealthChecks": [
       {
         "Name": "HTTP-Api-Basic",
-        "Uri": "http://localhost:60010/healthz"
+        "Uri": "https://localhost:61010/healthz"
       }
     ],
     "EvaluationTimeOnSeconds": 10,
