--- a/Identity.Presentation/appsettings.json
+++ b/Identity.Presentation/appsettings.json
@@ -19,7 +19,8 @@
   "Cors": {
     "AllowOrigins": [
       "http://localhost:60000",
-      "https://localhost:61000"
+      "https://localhost:61000",
+      "http://localhost:3000"
     ]
   },
 
@@ -48,7 +49,7 @@
     "ApiDocs": "identity-service-rest-api-service-dev",
     "Version": "v1",
     "Description": "This is the APIs documentation for Identity Service.",
-    "ServerUrl": "http://localhost:60001/auth",
+    "ServerUrl": "https://localhost:61001/auth",
     "ServerDescription": "Identity Service API service For Development",
     "ContactName": "Infinity Net Organization",
     "ContactEmail": "tech.infinitynet.org@gmail.com"
@@ -75,7 +76,7 @@
 
   "Metric": {
     "StandAloneKestrelServerEnabled": false,
-    "Port": 60001,
+    "Port": 61001,
     "Url": "/metrics",
     "Hostname": "+",
     "HttpMetricsEnabled": true,
@@ -86,7 +87,7 @@
     "HealthChecks": [
       {
         "Name": "HTTP-Api-Basic",
-        "Uri": "http://localhost:60001/healthz"
+        "Uri": "https://localhost:61001/healthz"
       }
     ],
     "EvaluationTimeOnSeconds": 10,
