--- a/Post.Presentation/appsettings.json
+++ b/Post.Presentation/appsettings.json
@@ -26,7 +26,8 @@
   "Cors": {
     "AllowOrigins": [
       "http://localhost:60000",
-      "https://localhost:61000"
+      "https://localhost:61000",
+      "http://localhost:3000"
     ]
   },
 
@@ -48,7 +49,7 @@
     "ApiDocs": "post-service-rest-api-service-dev",
     "Version": "v1",
     "Description": "This is the APIs documentation for Post Service.",
-    "ServerUrl": "http://localhost:60005/posts",
+    "ServerUrl": "https://localhost:61005/posts",
     "ServerDescription": "Post Service API service For Development",
     "ContactName": "Infinity Net Organization",
     "ContactEmail": "tech.infinitynet.org@gmail.com"
@@ -71,7 +72,7 @@
 
   "Metric": {
     "StandAloneKestrelServerEnabled": false,
-    "Port": 60005,
+    "Port": 61005,
     "Url": "/metrics",
     "Hostname": "+",
     "HttpMetricsEnabled": true,
@@ -82,7 +83,7 @@
     "HealthChecks": [
       {
         "Name": "HTTP-Api-Basic",
-        "Uri": "http://localhost:60005/healthz"
+        "Uri": "https://localhost:61005/healthz"
       }
     ],
     "EvaluationTimeOnSeconds": 10,
