--- a/Reaction.Presentation/appsettings.json
+++ b/Reaction.Presentation/appsettings.json
@@ -27,7 +27,8 @@
   "Cors": {
     "AllowOrigins": [
       "http://localhost:60000",
-      "https://localhost:61000"
+      "https://localhost:61000",
+      "http://localhost:3000"
     ]
   },
 
@@ -49,7 +50,7 @@
     "ApiDocs": "reaction-service-rest-api-service-dev",
     "Version": "v1",
     "Description": "This is the APIs documentation for Reaction Service.",
-    "ServerUrl": "http://localhost:60007/reactions",
+    "ServerUrl": "https://localhost:61007/reactions",
     "ServerDescription": "Reaction Service API service For Development",
     "ContactName": "Infinity Net Organization",
     "ContactEmail": "tech.infinitynet.org@gmail.com"
@@ -72,7 +73,7 @@
 
   "Metric": {
     "StandAloneKestrelServerEnabled": false,
-    "Port": 60007,
+    "Port": 61007,
     "Url": "/metrics",
     "Hostname": "+",
     "HttpMetricsEnabled": true,
@@ -83,7 +84,7 @@
     "HealthChecks": [
       {
         "Name": "HTTP-Api-Basic",
-        "Uri": "http://localhost:60007/healthz"
+        "Uri": "https://localhost:61007/healthz"
       }
     ],
     "EvaluationTimeOnSeconds": 10,
