--- a/Relationship.Presentation/appsettings.json
+++ b/Relationship.Presentation/appsettings.json
@@ -24,7 +24,8 @@
   "Cors": {
     "AllowOrigins": [
       "http://localhost:60000",
-      "https://localhost:61000"
+      "https://localhost:61000",
+      "http://localhost:3000"
     ]
   },
 
@@ -46,7 +47,7 @@
     "ApiDocs": "relationship-service-rest-api-service-dev",
     "Version": "v1",
     "Description": "This is the APIs documentation for Relationship Service.",
-    "ServerUrl": "http://localhost:60003/relationships",
+    "ServerUrl": "https://localhost:61003/relationships",
     "ServerDescription": "Relationship Service API service For Development",
     "ContactName": "Infinity Net Organization",
     "ContactEmail": "tech.infinitynet.org@gmail.com"
@@ -69,7 +70,7 @@
 
   "Metric": {
     "StandAloneKestrelServerEnabled": false,
-    "Port": 60003,
+    "Port": 61003,
     "Url": "/metrics",
     "Hostname": "+",
     "HttpMetricsEnabled": true,
@@ -80,7 +81,7 @@
     "HealthChecks": [
       {
         "Name": "HTTP-Api-Basic",
-        "Uri": "https://localhost:60003/healthz"
+        "Uri": "https://localhost:61003/healthz"
       }
     ],
     "EvaluationTimeOnSeconds": 10,
