--- a/Group.Presentation/appsettings.json
+++ b/Group.Presentation/appsettings.json
@@ -25,7 +25,8 @@
   "Cors": {
     "AllowOrigins": [
       "http://localhost:60000",
-      "https://localhost:61000"
+      "https://localhost:61000",
+      "http://localhost:3000"
     ]
   },
 
@@ -47,7 +48,7 @@
     "ApiDocs": "group-service-rest-api-service-dev",
     "Version": "v1",
     "Description": "This is the APIs documentation for Group Service.",
-    "ServerUrl": "http://localhost:60004/groups",
+    "ServerUrl": "https://localhost:61004/groups",
     "ServerDescription": "Group Service API service For Development",
     "ContactName": "Infinity Net Organization",
     "ContactEmail": "tech.infinitynet.org@gmail.com"
@@ -70,7 +71,7 @@
 
   "Metric": {
     "StandAloneKestrelServerEnabled": false,
-    "Port": 60004,
+    "Port": 61004,
     "Url": "/metrics",
     "Hostname": "+",
     "HttpMetricsEnabled": true,
@@ -81,7 +82,7 @@
     "HealthChecks": [
       {
         "Name": "HTTP-Api-Basic",
-        "Uri": "http://localhost:60004/healthz"
+        "Uri": "https://localhost:61004/healthz"
       }
     ],
     "EvaluationTimeOnSeconds": 10,
