--- a/Ocelot.Presentaition/Properties/launchSettings.json
+++ b/Ocelot.Presentaition/Properties/launchSettings.json
@@ -14,7 +14,17 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:60000;https://localhost:61000",
+      "applicationUrl": "http://localhost:60000",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
+    "https": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
+      "launchBrowser": true,
+      "launchUrl": "swagger",
+      "applicationUrl": "https://localhost:61000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
