feat: update message bus & seed files for posts

--- a/File.Presentation/appsettings.json
+++ b/File.Presentation/appsettings.json
@@ -56,8 +56,9 @@
     "ContactEmail": "tech.infinitynet.org@gmail.com"
   },
 
-  "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=tag_service_db;Username=infinitynetUser;Password=Password@123"
+  "MongoDB": {
+    "Connection": "mongodb://infinitynetUser:Password%40123@localhost:27017",
+    "DatabaseName": "file_metadata_db"
   },
 
   "Minio": {
@@ -65,7 +66,8 @@
     "Port": 9000,
     "AccessKey": "infinitynetUser",
     "SecretKey": "Password@123",
-    "BucketName": "infinity-net-bucket"
+    "MainBucketName": "infinity-net-bucket",
+    "TempBucketName": "infinity-net-temp-bucket"
   },
 
   "Redis": {
