--- a/Mail.Presentation/Properties/launchSettings.json
+++ b/Mail.Presentation/Properties/launchSettings.json
@@ -13,7 +13,16 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
-      "applicationUrl": "http://localhost:60009;https://localhost:61009",
+      "applicationUrl": "http://localhost:60009",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
+    "https": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
+      "launchBrowser": false,
+      "applicationUrl": "https://localhost:61009",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
