feat: complete seed photos for posts and comments

--- a/File.Presentation/appsettings.json
+++ b/File.Presentation/appsettings.json
@@ -65,9 +65,7 @@
     "Endpoint": "localhost",
     "Port": 9000,
     "AccessKey": "infinitynetUser",
-    "SecretKey": "Password@123",
-    "MainBucketName": "infinity-net-bucket",
-    "TempBucketName": "infinity-net-temp-bucket"
+    "SecretKey": "Password@123"
   },
 
   "Redis": {
