feat: get suggestion

--- a/Relationship.Application/Relationship.Application.csproj
+++ b/Relationship.Application/Relationship.Application.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\Relationship.Domain\Relationship.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DTOs\Requests\" />
+  </ItemGroup>
+
 </Project>
