feat: create user timeline with posts for news feed

--- a/Post.Presentation/appsettings.json
+++ b/Post.Presentation/appsettings.json
@@ -60,6 +60,11 @@
     "DefaultConnection": "Host=localhost;Port=5432;Database=post_service_db;Username=infinitynetUser;Password=Password@123"
   },
 
+  "MongoDB": {
+    "Connection": "mongodb://infinitynetUser:Password%40123@localhost:27017",
+    "DatabaseName": "news_feed_queue_db"
+  },
+
   "RabbitMQ": {
     "Host": "localhost",
     "ExchangeName": "post-service-exchange",
