feat: update gRPC getCommentCount + getPreviewComment

--- a/Post.Presentation/appsettings.json
+++ b/Post.Presentation/appsettings.json
@@ -21,7 +21,8 @@
     "ProfileService": "https://localhost:61002",
     "RelationshipService": "https://localhost:61003",
     "GroupService": "https://localhost:61004",
-    "FileService": "https://localhost:61010"
+    "FileService": "https://localhost:61010",
+    "CommentService": "https://localhost:61006"
   },
 
   "Cors": {
