feat: update grpc for reaction services

--- a/Comment.Presentation/appsettings.json
+++ b/Comment.Presentation/appsettings.json
@@ -21,7 +21,8 @@
     "ProfileService": "https://localhost:61002",
     "RelationshipService": "https://localhost:61003",
     "PostService": "https://localhost:61005",
-    "FileService": "https://localhost:61010"
+    "FileService": "https://localhost:61010",
+    "ReactionService": "https://localhost:61007"
   },
 
   "Cors": {
