--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -35,6 +35,7 @@
 	  <None Remove="Protos\file.proto" />
 	  <None Remove="Protos\group.proto" />
 	  <None Remove="Protos\post.proto" />
+	  <None Remove="Protos\reaction.proto" />
 	  <None Remove="Protos\relationship.proto" />
 	</ItemGroup>
 	
@@ -46,6 +47,12 @@
 	  <EmbeddedResource Update="Resources\SharedResource.en-US.resx">
 	    <SubType>Designer</SubType>
 	  </EmbeddedResource>
+	</ItemGroup>
+	
+	<ItemGroup>
+	  <Protobuf Update="Protos\reaction.proto">
+	    <GrpcServices>Both</GrpcServices>
+	  </Protobuf>
 	</ItemGroup>
 	
 	<ItemGroup>
