--- a/Post.Presentation/appsettings.json
+++ b/Post.Presentation/appsettings.json
@@ -22,7 +22,8 @@
     "RelationshipService": "https://localhost:61003",
     "GroupService": "https://localhost:61004",
     "FileService": "https://localhost:61010",
-    "CommentService": "https://localhost:61006"
+    "CommentService": "https://localhost:61006",
+    "ReactionService": "https://localhost:61007"
   },
 
   "Cors": {
