--- a/Notification.Application/Notification.Application.csproj
+++ b/Notification.Application/Notification.Application.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\Notification.Domain\Notification.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DTOs\Requests\" />
+  </ItemGroup>
+
 </Project>
