feat: refactor some endpoints & dtos to match with frontend

--- a/Identity.Presentation/appsettings.json
+++ b/Identity.Presentation/appsettings.json
@@ -29,7 +29,8 @@
   },
 
   "GrpcServers": {
-    "ProfileService": "https://localhost:61002"
+    "ProfileService": "https://localhost:61002",
+    "FileService": "https://localhost:61010"
   },
 
   "Jwt": {
