--- a/Reaction.Presentation/appsettings.json
+++ b/Reaction.Presentation/appsettings.json
@@ -21,7 +21,8 @@
     "ProfileService": "https://localhost:61002",
     "RelationshipService": "https://localhost:61003",
     "PostService": "https://localhost:61005",
-    "CommentService": "https://localhost:61006"
+    "CommentService": "https://localhost:61006",
+    "FileService": "https://localhost:61010"
   },
 
   "Cors": {
